removed the starting block for maven memory sizing
git-svn-id: http://anonsvn.jboss.org/repos/blacktie/trunk@3111 aa7494b7-e75f-0410-880c-f61b6724bf28